--- a/ProyectoHospital/HospitalEJBModule/pom.xml
+++ b/ProyectoHospital/HospitalEJBModule/pom.xml
@@ -63,12 +63,35 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        
         <!-- JSON B -->
         <dependency>
             <groupId>javax.json.bind</groupId>
             <artifactId>javax.json.bind-api</artifactId>
             <version>1.0</version>
         </dependency>
+        
+        <!-- Json ignore --> 
+        <!--<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.6.4</version>
+        </dependency>-->
+        
+        <!-- Json reference -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+
+        <!-- Model mapper -->        
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
