--- a/ProyectoHospital/HospitalEJBModule/pom.xml
+++ b/ProyectoHospital/HospitalEJBModule/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.9</version>
         </dependency>
+        
+        <!-- JSON -->        
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
 
     </dependencies>
 
