--- a/ProyectoHospital/UdeCSanitas/pom.xml
+++ b/ProyectoHospital/UdeCSanitas/pom.xml
@@ -73,33 +73,20 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.12.0</version>
+            <version>2.11.1</version>
         </dependency>
         <!-- Model mapper -->        
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>2.3.9</version>
-        </dependency>
-        <!-- Json -->        
+        </dependency> 
+        <!-- JSON -->        
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20140107</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.eclipse/yasson -->
-        <dependency>
-            <groupId>org.eclipse</groupId>
-            <artifactId>yasson</artifactId>
-            <version>1.0.9</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.glassfish/javax.json -->
-        <dependency>
-            <groupId>org.glassfish</groupId>
-            <artifactId>javax.json</artifactId>
-            <version>1.1.4</version>
-        </dependency>
+        </dependency>                 
 
     </dependencies>
 
