--- a/ProyectoHospital/UdeCSanitasWeb/pom.xml
+++ b/ProyectoHospital/UdeCSanitasWeb/pom.xml
@@ -18,7 +18,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>UdeCSanitas</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
